# algostructures-c

./: .gitignore  .travis.yml  Dockerfile  LICENSE  Makefile  README.rst  build.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.py  test_array_search.py
algostructures/: benchmark.py  build.py  main.c  search.pyx
algostructures/include/: algo_constants.h
algostructures/search/: array_search.c  array_search.h
res/: generate_numbers.py  random_3_digit_int_massive_set.txt  random_3_digit_int_sample_set.txt
src/: array_search.c
test/: main.c  test_array_search.c  test_array_search.h  test_array_search.py  uassert.c
