[tool.poetry]
name = "algostructures-c"
version = "0.1.0"
description = "A simple python wrapper around datastructures and algorithms implemented in C"
authors = ["Tanay PrabhuDesai <tanayseven@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
cffi = "^1.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
